# web_crawling_commeto

./: README.md  a
crawling_assignments/week1/: README.md  app.py  crawler.py  requirements.txt  run_sever.sh
crawling_assignments/week1/util/: calc.py
crawling_assignments/week2/: README.md  crawler.py
crawling_assignments/week2/coupang_crawler/: pyproject.toml
crawling_assignments/week2/coupang_crawler/tests/: test_coupang_crawler.py
crawling_assignments/week3/: async_coupang_crawler.py  sync_coupang_cralwer.py
crawling_assignments/week4/: README.md  app.py  config.py  instragram_data  parser.py  post_html.txt  requiremets.txt
crawling_study/week1/: README.md  bs4_1.py  bs4_2.py  bs4_3.py  bs4_4.py  bs4_5.py  bs4_6.py  scraping_test.py
crawling_study/week2/: json_request.py  session_request.py
crawling_study/week3/: github.py  playwright_1.py  playwright_2.py  proxies.csv  rotate_free_proxy.py
crawling_study/week4/: READEME.md  app.py  selenium_seekalpha.py  selenium_tutorial.py
crawling_study/week5/: Parsing Company 10Ks From the SEC.ipynb  sec-cik-mapper.ipynb  tikcer_to_cik.ipynb
